# VigzoneAI

./: .env  .env.example  .gitignore  Dockerfile  PAUSE_COMPLETE.md  PAUSE_FEATURE.md  PAUSE_FEATURE_SUMMARY.md  PAUSE_USAGE_GUIDE.md  Procfile  README.md  app.py  apply_realtime_patch.py  auth.py  dataset.txt  docker-compose.yml  file_processing.py  image_generation.py  launcher.py  main.py  pyproject.toml  requirements.txt  self_learning.py  start.bat  start.sh  stream_manager.py  test_pause_simulation.py  test_payload.py  test_self_learning.py  test_stream_manager.py  verify_pause_feature.py  vigzone_ai.py  vigzone_vocab.json  virus_scanner.py  web_search.py
data/: knowledge.json
static/: index.html  landing.html
static/js/: utils.js
