[project]
name = "vigzoneai"
version = "2.0.0"
description = "Vigzone AI - a real conversational AI assistant powered by Groq"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.6.1",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
    "Pillow==10.4.0",
    "pypdf==4.3.1",
    "python-docx==1.1.2",
]
